# alpha-centauri-terminal

./: .gitignore  .prettierignore  README.md  buglist.md  buglist.txt  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  todo.md  todo.txt  vite.config.js
.github/workflows/: publish.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  usr_conf.rs
src-tauri/src/configuration/: keymap.rs  userConfig.rs  user_configuration.rs
src/components/: NotificationBar.svelte  ScreenManager.svelte  TerminalScreen.svelte
src/components/PaneManager/: Divider.svelte  PaneManager.svelte
src/components/ScreenManager/: ScreenManager.svelte  ScreenManager.test.ts
src/components/TabManager/: Tab.svelte  TabManager.svelte  TabManager.test.ts  TabManager.tests.ts
src/components/TerminalScreen/: TerminalScreen.svelte
src/lib/: ConfigLoader.svelte  NotificationListener.svelte  Toaster.svelte  configurationStore.ts  constants.ts  keymapUtils.ts  types.ts  webGL2Store.ts
src/lib/components/: CollapsibleDetails.svelte  Toaster.svelte
src/lib/pty/: createSession.ts
src/lib/store/: ConfigLoader.svelte  configurationStore.ts  index.ts  panes.ts  sessions.ts  tabTrees.ts  tabs.test.ts  tabs.ts  trees.ts  (+2 more)
src/pty/: createSession.ts
src/routes/: +layout.svelte  +page.svelte
tests/: e2e.spec.ts  testingConfig.json
tests/utils/: logger.ts
(+6 files in other folders)
