[package]
name = "alpha-centauri-terminal"
version = "0.0.0"
description = "Alpha CenTauri"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8.1"
dir = "0.1.2"
tauri-plugin-window-state = { version = "2.0.0-rc" }
tempdir = "0.3.7"
kill_tree = { version = "0.2.4", features = ["tokio"] }
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-cli = "2.0.0-rc"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
